artichoke-backend/src/sys/ffi.rs

extern "C" {
    pub fn mrb_define_module_function_id(
        mrb: *mut mrb_state,
        cla: *mut RClass,
        name: mrb_sym,
        fun: mrb_func_t,
        aspec: mrb_aspec,
    );
}
extern "C" {
    pub fn mrb_define_const(mrb: *mut mrb_state, cla: *mut RClass, name: *const ::core::ffi::c_char, val: mrb_value);
}
extern "C" {
    pub fn mrb_define_const_id(mrb: *mut mrb_state, cla: *mut RClass, name: mrb_sym, val: mrb_value);
}
extern "C" {
    pub fn mrb_undef_method(mrb: *mut mrb_state, cla: *mut RClass, name: *const ::core::ffi::c_char);
}
extern "C" {
    pub fn mrb_undef_method_id(arg1: *mut mrb_state, arg2: *mut RClass, arg3: mrb_sym);
}
extern "C" {
    pub fn mrb_undef_class_method(mrb: *mut mrb_state, cls: *mut RClass, name: *const ::core::ffi::c_char);
}
extern "C" {
    pub fn mrb_undef_class_method_id(mrb: *mut mrb_state, cls: *mut RClass, name: mrb_sym);
}
extern "C" {
    pub fn mrb_obj_new(mrb: *mut mrb_state, c: *mut RClass, argc: mrb_int, argv: *const mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_class_new(mrb: *mut mrb_state, super_: *mut RClass) -> *mut RClass;
}
extern "C" {
    pub fn mrb_module_new(mrb: *mut mrb_state) -> *mut RClass;
}
extern "C" {
    pub fn mrb_class_defined(mrb: *mut mrb_state, name: *const ::core::ffi::c_char) -> mrb_bool;
}
extern "C" {
    pub fn mrb_class_defined_id(mrb: *mut mrb_state, name: mrb_sym) -> mrb_bool;
}
extern "C" {
    pub fn mrb_class_get(mrb: *mut mrb_state, name: *const ::core::ffi::c_char) -> *mut RClass;
}
extern "C" {
    pub fn mrb_class_get_id(mrb: *mut mrb_state, name: mrb_sym) -> *mut RClass;
}
extern "C" {
    pub fn mrb_exc_get_id(mrb: *mut mrb_state, name: mrb_sym) -> *mut RClass;
}
extern "C" {
    pub fn mrb_class_defined_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::core::ffi::c_char,
    ) -> mrb_bool;
}
extern "C" {
    pub fn mrb_class_defined_under_id(mrb: *mut mrb_state, outer: *mut RClass, name: mrb_sym) -> mrb_bool;
}
extern "C" {
    pub fn mrb_class_get_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::core::ffi::c_char,
    ) -> *mut RClass;
}
extern "C" {
    pub fn mrb_class_get_under_id(mrb: *mut mrb_state, outer: *mut RClass, name: mrb_sym) -> *mut RClass;
}
extern "C" {
    pub fn mrb_module_get(mrb: *mut mrb_state, name: *const ::core::ffi::c_char) -> *mut RClass;
}
extern "C" {
    pub fn mrb_module_get_id(mrb: *mut mrb_state, name: mrb_sym) -> *mut RClass;
}
extern "C" {
    pub fn mrb_module_get_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::core::ffi::c_char,
    ) -> *mut RClass;
}
extern "C" {
    pub fn mrb_module_get_under_id(mrb: *mut mrb_state, outer: *mut RClass, name: mrb_sym) -> *mut RClass;
}
extern "C" {
    pub fn mrb_notimplement(arg1: *mut mrb_state);
}
extern "C" {
    pub fn mrb_notimplement_m(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_obj_dup(mrb: *mut mrb_state, obj: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_obj_respond_to(mrb: *mut mrb_state, c: *mut RClass, mid: mrb_sym) -> mrb_bool;
}
extern "C" {
    pub fn mrb_define_class_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::core::ffi::c_char,
        super_: *mut RClass,
    ) -> *mut RClass;
}
extern "C" {
    pub fn mrb_define_class_under_id(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: mrb_sym,
        super_: *mut RClass,
    ) -> *mut RClass;
}
extern "C" {
    pub fn mrb_define_module_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::core::ffi::c_char,
    ) -> *mut RClass;
}
extern "C" {
    pub fn mrb_define_module_under_id(mrb: *mut mrb_state, outer: *mut RClass, name: mrb_sym) -> *mut RClass;
}
pub type mrb_args_format = *const ::core::ffi::c_char;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_kwargs {
    pub num: mrb_int,
    pub required: mrb_int,
    pub table: *const mrb_sym,
    pub values: *mut mrb_value,
    pub rest: *mut mrb_value,
}
#[test]
fn bindgen_test_layout_mrb_kwargs() {
    const UNINIT: ::core::mem::MaybeUninit<mrb_kwargs> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<mrb_kwargs>(),
        40usize,
        concat!("Size of: ", stringify!(mrb_kwargs))
    );
    assert_eq!(
        ::core::mem::align_of::<mrb_kwargs>(),
        8usize,
        concat!("Alignment of ", stringify!(mrb_kwargs))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).num) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(mrb_kwargs), "::", stringify!(num))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).required) as usize - ptr as usize },
        8usize,
        concat!("Offset of field: ", stringify!(mrb_kwargs), "::", stringify!(required))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).table) as usize - ptr as usize },
        16usize,
        concat!("Offset of field: ", stringify!(mrb_kwargs), "::", stringify!(table))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).values) as usize - ptr as usize },
        24usize,
        concat!("Offset of field: ", stringify!(mrb_kwargs), "::", stringify!(values))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).rest) as usize - ptr as usize },
        32usize,
        concat!("Offset of field: ", stringify!(mrb_kwargs), "::", stringify!(rest))
    );
}
extern "C" {
    pub fn mrb_get_args(mrb: *mut mrb_state, format: mrb_args_format, ...) -> mrb_int;
}
extern "C" {
    pub fn mrb_get_args_a(mrb: *mut mrb_state, format: mrb_args_format, ptr: *mut *mut ::core::ffi::c_void)
        -> mrb_int;
}
extern "C" {
    pub fn mrb_get_argc(mrb: *mut mrb_state) -> mrb_int;
}
extern "C" {
    pub fn mrb_get_argv(mrb: *mut mrb_state) -> *const mrb_value;
}
extern "C" {
    pub fn mrb_get_arg1(mrb: *mut mrb_state) -> mrb_value;
}
extern "C" {
    pub fn mrb_block_given_p(mrb: *mut mrb_state) -> mrb_bool;
}
extern "C" {
    pub fn mrb_funcall(
        mrb: *mut mrb_state,
        val: mrb_value,
        name: *const ::core::ffi::c_char,
        argc: mrb_int,
        ...
    ) -> mrb_value;
}
extern "C" {
    pub fn mrb_funcall_id(mrb: *mut mrb_state, val: mrb_value, mid: mrb_sym, argc: mrb_int, ...) -> mrb_value;
}
extern "C" {
    pub fn mrb_funcall_argv(
        mrb: *mut mrb_state,
        val: mrb_value,
        name: mrb_sym,
        argc: mrb_int,
        argv: *const mrb_value,
    ) -> mrb_value;
}
extern "C" {
    pub fn mrb_funcall_with_block(
        mrb: *mut mrb_state,
        val: mrb_value,
        name: mrb_sym,
        argc: mrb_int,
        argv: *const mrb_value,
        block: mrb_value,
    ) -> mrb_value;
}
extern "C" {
    pub fn mrb_intern_cstr(mrb: *mut mrb_state, str_: *const ::core::ffi::c_char) -> mrb_sym;
}
extern "C" {
    pub fn mrb_intern(arg1: *mut mrb_state, arg2: *const ::core::ffi::c_char, arg3: usize) -> mrb_sym;
}
extern "C" {
    pub fn mrb_intern_static(arg1: *mut mrb_state, arg2: *const ::core::ffi::c_char, arg3: usize) -> mrb_sym;
}
extern "C" {
    pub fn mrb_intern_str(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_sym;
}
extern "C" {
    pub fn mrb_intern_check_cstr(arg1: *mut mrb_state, arg2: *const ::core::ffi::c_char) -> mrb_sym;
}
extern "C" {
    pub fn mrb_intern_check(arg1: *mut mrb_state, arg2: *const ::core::ffi::c_char, arg3: usize) -> mrb_sym;
}
extern "C" {
    pub fn mrb_intern_check_str(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_sym;
}
extern "C" {
    pub fn mrb_check_intern_cstr(arg1: *mut mrb_state, arg2: *const ::core::ffi::c_char) -> mrb_value;
}
extern "C" {
    pub fn mrb_check_intern(arg1: *mut mrb_state, arg2: *const ::core::ffi::c_char, arg3: usize) -> mrb_value;
}
extern "C" {
    pub fn mrb_check_intern_str(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_sym_name(arg1: *mut mrb_state, arg2: mrb_sym) -> *const ::core::ffi::c_char;
}
extern "C" {
    pub fn mrb_sym_name_len(arg1: *mut mrb_state, arg2: mrb_sym, arg3: *mut mrb_int) -> *const ::core::ffi::c_char;
}
extern "C" {
    pub fn mrb_sym_dump(arg1: *mut mrb_state, arg2: mrb_sym) -> *const ::core::ffi::c_char;
}
extern "C" {
    pub fn mrb_sym_str(arg1: *mut mrb_state, arg2: mrb_sym) -> mrb_value;
}
extern "C" {
    pub fn mrb_malloc(arg1: *mut mrb_state, arg2: usize) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn mrb_calloc(arg1: *mut mrb_state, arg2: usize, arg3: usize) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn mrb_realloc(arg1: *mut mrb_state, arg2: *mut ::core::ffi::c_void, arg3: usize) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn mrb_realloc_simple(
        arg1: *mut mrb_state,
        arg2: *mut ::core::ffi::c_void,
        arg3: usize,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn mrb_malloc_simple(arg1: *mut mrb_state, arg2: usize) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn mrb_obj_alloc(arg1: *mut mrb_state, arg2: mrb_vtype, arg3: *mut RClass) -> *mut RBasic;
}
extern "C" {
    pub fn mrb_free(arg1: *mut mrb_state, arg2: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn mrb_str_new(mrb: *mut mrb_state, p: *const ::core::ffi::c_char, len: mrb_int) -> mrb_value;
}
extern "C" {
    pub fn mrb_str_new_cstr(arg1: *mut mrb_state, arg2: *const ::core::ffi::c_char) -> mrb_value;
}
extern "C" {
    pub fn mrb_str_new_static(mrb: *mut mrb_state, p: *const ::core::ffi::c_char, len: mrb_int) -> mrb_value;
}
extern "C" {
    pub fn mrb_obj_freeze(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_open() -> *mut mrb_state;
}
extern "C" {
    pub fn mrb_open_allocf(f: mrb_allocf, ud: *mut ::core::ffi::c_void) -> *mut mrb_state;
}
extern "C" {
    pub fn mrb_open_core(f: mrb_allocf, ud: *mut ::core::ffi::c_void) -> *mut mrb_state;
}
extern "C" {
    pub fn mrb_close(mrb: *mut mrb_state);
}
extern "C" {
    pub fn mrb_default_allocf(
        arg1: *mut mrb_state,
        arg2: *mut ::core::ffi::c_void,
        arg3: usize,
        arg4: *mut ::core::ffi::c_void,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn mrb_top_self(mrb: *mut mrb_state) -> mrb_value;
}
extern "C" {
    pub fn mrb_top_run(mrb: *mut mrb_state, proc_: *const RProc, self_: mrb_value, stack_keep: mrb_int) -> mrb_value;
}
extern "C" {
    pub fn mrb_vm_run(mrb: *mut mrb_state, proc_: *const RProc, self_: mrb_value, stack_keep: mrb_int) -> mrb_value;
}
extern "C" {
    pub fn mrb_vm_exec(mrb: *mut mrb_state, proc_: *const RProc, iseq: *const mrb_code) -> mrb_value;
}
extern "C" {
    pub fn mrb_p(arg1: *mut mrb_state, arg2: mrb_value);
}
extern "C" {
    pub fn mrb_obj_id(obj: mrb_value) -> mrb_int;
}
extern "C" {
    pub fn mrb_obj_to_sym(mrb: *mut mrb_state, name: mrb_value) -> mrb_sym;
}
extern "C" {
    pub fn mrb_obj_eq(mrb: *mut mrb_state, a: mrb_value, b: mrb_value) -> mrb_bool;
}
extern "C" {
    pub fn mrb_obj_equal(mrb: *mut mrb_state, a: mrb_value, b: mrb_value) -> mrb_bool;
}
extern "C" {
    pub fn mrb_equal(mrb: *mut mrb_state, obj1: mrb_value, obj2: mrb_value) -> mrb_bool;
}
extern "C" {
    pub fn mrb_ensure_float_type(mrb: *mut mrb_state, val: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_inspect(mrb: *mut mrb_state, obj: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_eql(mrb: *mut mrb_state, obj1: mrb_value, obj2: mrb_value) -> mrb_bool;
}
extern "C" {
    pub fn mrb_cmp(mrb: *mut mrb_state, obj1: mrb_value, obj2: mrb_value) -> mrb_int;
}
extern "C" {
    pub fn mrb_garbage_collect(arg1: *mut mrb_state);
}
extern "C" {
    pub fn mrb_full_gc(arg1: *mut mrb_state);
}
extern "C" {
    pub fn mrb_incremental_gc(arg1: *mut mrb_state);
}
extern "C" {
    pub fn mrb_gc_mark(arg1: *mut mrb_state, arg2: *mut RBasic);
}
